--- a/src/css/main.css
+++ b/src/css/main.css
@@ -62,7 +62,7 @@ session {
 }
 
 session h2 {
-  font-family: 'Source Code Pro', 'cwtexqhei';
+  font-family: Arial, 'cwtexqhei';
   padding-top: 12px;
 }
 
