--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, 'cwtexqhei';
   background: deepskyblue;
-  padding: 160px 0;
+  padding: 160px 0 0;
   overflow-x: hidden;
 }
 
@@ -27,7 +27,7 @@ body {
 }
 
 .Container::after {
-  top: 93%;
+  bottom: 66px;
   left: -35px;
   width: 140px;
   height: 200px;
@@ -168,6 +168,20 @@ aside p:last-of-type .next {
   font-size: 12px;
 }
 
+.Card {
+  margin-bottom: 16px;
+}
+
+footer {
+  text-align: center;
+  padding: 80px 0;
+}
+
+footer a {
+  color: #C04248;
+  font-weight: 600;
+}
+
 @media only screen and (min-width: 728px) and (max-width: 1080px) {
   aside {
     font-size: 1rem;
@@ -176,7 +190,7 @@ aside p:last-of-type .next {
 
 @media only screen and (min-width: 320px) and (max-width: 768px) {
   .Container::after {
-    top: 98%;
+    bottom: 38px;
     left: -58px;
     background-size: 80px auto;
   }
