--- a/src/css/main.css
+++ b/src/css/main.css
@@ -172,6 +172,11 @@ aside p:last-of-type .next {
   margin-bottom: 16px;
 }
 
+.Card img {
+  width: 35px;
+  padding-top: 3px;
+}
+
 footer {
   text-align: center;
   padding: 80px 0;
