--- a/src/css/main.css
+++ b/src/css/main.css
@@ -187,6 +187,11 @@ footer a {
   font-weight: 600;
 }
 
+footer a:hover {
+  color: #FF3F48;
+  text-decoration: none;
+}
+
 @media only screen and (min-width: 728px) and (max-width: 1080px) {
   aside {
     font-size: 1rem;
