--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,5 @@
 body {
+  font-family: 'Helvetica Neue', Helvetica, 'Liberation Sans', Arial, sans-serif;
   background: deepskyblue;
   padding: 160px 0 0;
   overflow-x: hidden;
@@ -94,7 +95,7 @@ section {
 }
 
 section h2 {
-  font-family: Roboto, 'cwtexqhei';
+  font-family: 'Helvetica Neue', Helvetica, 'Liberation Sans', Arial, 'cwtexqhei';
   padding-top: 12px;
 }
 
