--- a/src/css/main.css
+++ b/src/css/main.css
@@ -206,7 +206,11 @@ aside p:last-of-type .next {
   margin-bottom: 16px;
 }
 
-.Card.project-card img {
+.CardTitle span:first-child {
+  font-family: 'Helvetica Neue', Helvetica, 'Liberation Sans', Arial, sans-serif;
+}
+
+.Project.Card img {
   width: 35px;
   padding-top: 4px;
 }
